fix(regression): lost spacing between tag label icon and text

--- a/extensions/tags/less/common/TagLabel.less
+++ b/extensions/tags/less/common/TagLabel.less
@@ -19,6 +19,10 @@
   &.colored &-text, &--colored &-text {
     color: var(--tag-color) !important;
   }
+
+  &-icon {
+    margin-right: 2px;
+  }
 }
 
 .TagLabel {
